--- a/src/game/Game.css
+++ b/src/game/Game.css
@@ -1,14 +1,26 @@
 .board {
-    background: lightblue;
-    height: 600px;
-    width: 600px;
+    background: #c8e2eb;
+    height: 500px;
+    width: 500px;
     margin: auto;
     border-radius: 10px;
-    border: 3px solid salmon;
-    display: flex;
-    justify-content: center;
+    border: 5px solid #f19354;
     position: relative;
-    box-shadow: 0 0 5px solid black;
+    box-shadow: 0 0 10px black;
+}
+
+.reset-btn {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    z-index: 1;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
 }
 
 .board table {
@@ -20,56 +32,60 @@
     height: 40px;
 }
 
+.main-board {
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 175px;
+    left: 50%;
+    transform: translate(-50%);
+}
+
 .main-board table td {
     border: 1px solid #69696973;
     cursor: pointer;
 }
 
-.board table td[colspan], table td.no-color {
+.main-board table td[colspan],
+table td.no-color {
     border: none;
     cursor: default;
 }
 
-.main-board {
-    width: 300px;
-    height: 300px;
-    position: absolute;
-    top: 200px;
-}
-
 .green-pice {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 160px;
+    left: 20px;
 }
+
 .purple-pice {
     position: absolute;
-    top: 10px;
-    left: 70px;
+    top: 20px;
+    left: 20px;
 }
 
 .pink-pice {
     position: absolute;
-    top: 10px;
-    left: 210px;
+    top: 20px;
+    left: 160px;
 }
 
 .blue-pice {
     position: absolute;
-    top: 10px;
-    right: 210px;
+    top: 20px;
+    right: 160px;
 }
 
 .aqua-pice {
     position: absolute;
-    top: 10px;
-    right: 70px;
+    top: 20px;
+    right: 20px;
 }
 
 .yellow-pice {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 160px;
+    right: 20px;
 }
 
 .color {
